# ChangeLog for x11-apps/xdpyinfo
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/xdpyinfo/ChangeLog,v 1.24 2006/10/10 23:55:18 dberkholz Exp $

  10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  xdpyinfo-1.0.1.ebuild:
  Update description to be less generic.

  01 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  xdpyinfo-1.0.1.ebuild:
  libXext has a runtime dep on xextproto now, so we don't need to depend on it
  here.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> xdpyinfo-1.0.1.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> xdpyinfo-1.0.1.ebuild:
  Mark 1.0.1 stable on ia64

  07 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> xdpyinfo-1.0.1.ebuild:
  Add ~x86-fbsd keyword.

  01 Jul 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xdpyinfo-1.0.1.ebuild:
  ppc/sparc/mips/alpha/arm/sh stable

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org> xdpyinfo-1.0.1.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> xdpyinfo-1.0.1.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xdpyinfo-1.0.1.ebuild:
  x86 stable.

  14 Feb 2006; Markus Rothe <corsair@gentoo.org> xdpyinfo-1.0.1.ebuild:
  Added ~ppc64; bug #122726

  05 Jan 2006; Doug Goldstein <cardoe@gentoo.org> xdpyinfo-1.0.1.ebuild:
  Adding ~ppc

  26 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  -xdpyinfo-0.99.2.ebuild, -xdpyinfo-1.0.0.ebuild:
  Pull old versions.

*xdpyinfo-1.0.1 (23 Dec 2005)

  23 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>;
  +xdpyinfo-1.0.1.ebuild:
  Bump for 7.0.

*xdpyinfo-1.0.0 (18 Dec 2005)

  18 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  +xdpyinfo-1.0.0.ebuild:
  Bump for 7.0RC4.

  09 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>;
  -files/xineramaproto.patch:
  Unused file.

  09 Dec 2005; Donnie Berkholz <spyderous@gentoo.org>;
  -xdpyinfo-0.99.0.ebuild, -xdpyinfo-0.99.1.ebuild: