@@ -1,12 +1,17 @@
 DIST xdpyinfo-1.0.1.tar.bz2 87678 RMD160 63776af9d29fbbc653f0cfda528e955372ea276c SHA1 497b6aca9f6fe3efafc3182ae63d8a0da012a08b SHA256 1ccdb5862f60bbc9712e21ee415699af88e260ced431ccfcfde8f95c34a45c61
+DIST xdpyinfo-1.0.2.tar.bz2 100024 RMD160 7f33b2c70602059fa93e7fc9c2ee3dedd0f8f3e1 SHA1 79516efc860fd9618a1e29954839eff32a38b717 SHA256 c9927fc33e8a4422d74b1ebee0d19dd5a16d9ebc435e8f47f0aa546501ccfed3
 EBUILD xdpyinfo-1.0.1.ebuild 887 RMD160 da206167d8c26cf409da202dad2ffb0aac172277 SHA1 10b4bd580d3d3933f0b841b8b719c2a4e2df52f5 SHA256 63e502cc76b3e174f9fb1dedc624d46c892070d6f63148e71ac54bf1c8662674
 MD5 c32a3b0477d01be59d08f2944ad822ad xdpyinfo-1.0.1.ebuild 887
 RMD160 da206167d8c26cf409da202dad2ffb0aac172277 xdpyinfo-1.0.1.ebuild 887
 SHA256 63e502cc76b3e174f9fb1dedc624d46c892070d6f63148e71ac54bf1c8662674 xdpyinfo-1.0.1.ebuild 887
-MISC ChangeLog 3014 RMD160 166ea60805d91cbac147e5fb9b4982f7d23ac7c6 SHA1 4800975194c77e446323e105c046bb41c89ca7ab SHA256 a414a8ac12b9a83667f641dc778fd567fad45dbe1f2a2fdb7efe5fc688eab46a
-MD5 c544d9447ee7715f4f3da0310c494a71 ChangeLog 3014
-RMD160 166ea60805d91cbac147e5fb9b4982f7d23ac7c6 ChangeLog 3014
-SHA256 a414a8ac12b9a83667f641dc778fd567fad45dbe1f2a2fdb7efe5fc688eab46a ChangeLog 3014
+EBUILD xdpyinfo-1.0.2.ebuild 1067 RMD160 300e0abb2fea9aca848aa6ab5c3914cd39f72c0e SHA1 106c2c7c87a1d4394df1574ada0a789fe0282a02 SHA256 4be5a3d48380096fbc687e76a79f8fd196df0d578b74c9726c2a8720cf2a4c2a
+MD5 521f3c540cda5284c338f20711732df4 xdpyinfo-1.0.2.ebuild 1067
+RMD160 300e0abb2fea9aca848aa6ab5c3914cd39f72c0e xdpyinfo-1.0.2.ebuild 1067
+SHA256 4be5a3d48380096fbc687e76a79f8fd196df0d578b74c9726c2a8720cf2a4c2a xdpyinfo-1.0.2.ebuild 1067
+MISC ChangeLog 3358 RMD160 8e2926c416345dcc6c51f4e89d84da75f39bc3d7 SHA1 bab8c88fd54b94db4f42422454c0ec00d53b1a1f SHA256 4bca69026c4c535e351cc4d47a3a480da48b19a5b09e3eedef162ee933a37600
+MD5 9ee58ee4adf48f45b01aad9a212463c0 ChangeLog 3358
+RMD160 8e2926c416345dcc6c51f4e89d84da75f39bc3d7 ChangeLog 3358
+SHA256 4bca69026c4c535e351cc4d47a3a480da48b19a5b09e3eedef162ee933a37600 ChangeLog 3358
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
 MD5 a37bab73e2f24b213932c30997d3d360 metadata.xml 156
 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 metadata.xml 156
@@ -14,3 +19,6 @@ SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055 metadata
 MD5 1a91b1f8cc5a52035628fef4f2be56e5 files/digest-xdpyinfo-1.0.1 244
 RMD160 6e1da0b04d7586415d73d95a9f8c925c1616e23b files/digest-xdpyinfo-1.0.1 244
 SHA256 1415c0916218c0f6b020161e4cae8121e38090ccbab74a82ca543a85218b9b63 files/digest-xdpyinfo-1.0.1 244
+MD5 a620d2edaac36810364b9a4e64316589 files/digest-xdpyinfo-1.0.2 247
+RMD160 cbf6349874ba9459c95129838b77f1022b9eb94a files/digest-xdpyinfo-1.0.2 247
+SHA256 1c5a15414fcbeffc20fb29970e45a17c85a6ce22bf9313f6f7b0e9ad53e48a14 files/digest-xdpyinfo-1.0.2 247
