@@ -1,0 +1,3 @@
+MD5 c9ee60ae52c97c51d4ca327e53f0cb61 xdpyinfo-1.0.2.tar.bz2 100024
+RMD160 7f33b2c70602059fa93e7fc9c2ee3dedd0f8f3e1 xdpyinfo-1.0.2.tar.bz2 100024
+SHA256 c9927fc33e8a4422d74b1ebee0d19dd5a16d9ebc435e8f47f0aa546501ccfed3 xdpyinfo-1.0.2.tar.bz2 100024
