@@ -1,6 +1,16 @@
 # ChangeLog for x11-apps/xdpyinfo
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xdpyinfo/ChangeLog,v 1.24 2006/10/10 23:55:18 dberkholz Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xdpyinfo/ChangeLog,v 1.25 2007/03/31 15:07:20 joshuabaergen Exp $
+
+*xdpyinfo-1.0.2 (31 Mar 2007)
+
+  31 Mar 2007; Joshua Baergen <joshuabaergen@gentoo.org>
+  +xdpyinfo-1.0.2.ebuild:
+  Version bump.  Fixes several memory leaks and other bugs.
+  
+  I've also added the dga, dmx and xinerama USE-flags per Ingo Bormuth's
+  request.  Adding these USE-flags was not possible before this release. (Bug
+  #132502)
 
   10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>;
   xdpyinfo-1.0.1.ebuild:
